Fix #80 meet the toggler text overlaps with the images on small screens

--- a/app/static-pages/meet/stylesheets/scss/style.scss
+++ b/app/static-pages/meet/stylesheets/scss/style.scss
@@ -417,7 +417,7 @@ p { margin: 0 0 28px 0; padding: 0; }
 
   h1 { font-size: 45px; }
 
-  .top { padding: 110px 20px 0; font-size: 16px; height: 280px; }
+  .top { padding: 110px 20px 0; font-size: 16px; height: 100%; float: left }
 
   .grid-holder {
     text-align: center;
